🥈🍥 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Select ONE Additional
       <div>
         <h2 id="start">The Muse</h2>
         <img
-          class="pic" src="https://i.natgeofe.com/n/5fdfbda3-0ccf-4df1-8ec1-fe8a521e6337/Notre-Dame_west-facade.jpg?w=2560&h=3496"
+          class="pic" src="https://cdn.glitch.global/3b813e19-95df-4fe1-bb71-86a9d0463ccd/aacbecff-ff76-4fc7-89d5-c7e476a276b2.image.png?v=1742398075983"
         />
       </div>
       <div>
